SdmFramework/SdmFramework/Service/ViewEngine/Compiler/Visitor/Generated/BasicRazorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BasicRazor.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class BasicRazorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, INT=33, FlOAT=34, STRING=35, BOOL=36, NULL=37, ID=38, WS=39;
	public const int
		RULE_razorCode = 0, RULE_modelDeclaration = 1, RULE_type = 2, RULE_genericType = 3, 
		RULE_htmlElement = 4, RULE_textContent = 5, RULE_modelDataExpression = 6, 
		RULE_modelForExpression = 7, RULE_iterationVariable = 8, RULE_globalVariable = 9, 
		RULE_openingTag = 10, RULE_closingTag = 11, RULE_blockContent = 12, RULE_razorBlock = 13, 
		RULE_foreachStatement = 14, RULE_ifStatement = 15, RULE_forStatement = 16, 
		RULE_whileStatement = 17, RULE_statement = 18, RULE_expression = 19, RULE_multOp = 20, 
		RULE_addOp = 21, RULE_compareOp = 22, RULE_boolOp = 23, RULE_const = 24;
	public static readonly string[] ruleNames = {
		"razorCode", "modelDeclaration", "type", "genericType", "htmlElement", 
		"textContent", "modelDataExpression", "modelForExpression", "iterationVariable", 
		"globalVariable", "openingTag", "closingTag", "blockContent", "razorBlock", 
		"foreachStatement", "ifStatement", "forStatement", "whileStatement", "statement", 
		"expression", "multOp", "addOp", "compareOp", "boolOp", "const"
	};

	private static readonly string[] _LiteralNames = {
		null, "'@model'", "'<'", "'>'", "'@Model.'", "'Model'", "'Model.'", "'@'", 
		"'.'", "'@Global.'", "'</'", "'@{'", "'}'", "'@foreach'", "'('", "')'", 
		"'{'", "'if'", "'for'", "';'", "'while'", "'='", "'!'", "'*'", "'/'", 
		"'+'", "'-'", "'=='", "'!='", "'>='", "'<='", "'||'", "'&&'", null, null, 
		null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "INT", "FlOAT", 
		"STRING", "BOOL", "NULL", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BasicRazor.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static BasicRazorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BasicRazorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BasicRazorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RazorCodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModelDeclarationContext modelDeclaration() {
			return GetRuleContext<ModelDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HtmlElementContext[] htmlElement() {
			return GetRuleContexts<HtmlElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HtmlElementContext htmlElement(int i) {
			return GetRuleContext<HtmlElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RazorBlockContext[] razorBlock() {
			return GetRuleContexts<RazorBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RazorBlockContext razorBlock(int i) {
			return GetRuleContext<RazorBlockContext>(i);
		}
		public RazorCodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_razorCode; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterRazorCode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitRazorCode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRazorCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RazorCodeContext razorCode() {
		RazorCodeContext _localctx = new RazorCodeContext(Context, State);
		EnterRule(_localctx, 0, RULE_razorCode);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			modelDeclaration();
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1 || _la==T__10) {
				{
				State = 53;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__1:
					{
					State = 51;
					htmlElement();
					}
					break;
				case T__10:
					{
					State = 52;
					razorBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ModelDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterModelDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitModelDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelDeclarationContext modelDeclaration() {
		ModelDeclarationContext _localctx = new ModelDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_modelDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(T__0);
			State = 59;
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(BasicRazorParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GenericTypeContext genericType() {
			return GetRuleContext<GenericTypeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_type);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61;
				Match(ID);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62;
				genericType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(BasicRazorParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(BasicRazorParser.ID, i);
		}
		public GenericTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterGenericType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitGenericType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGenericType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GenericTypeContext genericType() {
		GenericTypeContext _localctx = new GenericTypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_genericType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(ID);
			State = 66;
			Match(T__1);
			State = 67;
			Match(ID);
			State = 68;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OpeningTagContext openingTag() {
			return GetRuleContext<OpeningTagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClosingTagContext closingTag() {
			return GetRuleContext<ClosingTagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HtmlElementContext[] htmlElement() {
			return GetRuleContexts<HtmlElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HtmlElementContext htmlElement(int i) {
			return GetRuleContext<HtmlElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RazorBlockContext[] razorBlock() {
			return GetRuleContexts<RazorBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RazorBlockContext razorBlock(int i) {
			return GetRuleContext<RazorBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContentContext[] textContent() {
			return GetRuleContexts<TextContentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContentContext textContent(int i) {
			return GetRuleContext<TextContentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModelDataExpressionContext[] modelDataExpression() {
			return GetRuleContexts<ModelDataExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModelDataExpressionContext modelDataExpression(int i) {
			return GetRuleContext<ModelDataExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForeachStatementContext[] foreachStatement() {
			return GetRuleContexts<ForeachStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForeachStatementContext foreachStatement(int i) {
			return GetRuleContext<ForeachStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationVariableContext[] iterationVariable() {
			return GetRuleContexts<IterationVariableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationVariableContext iterationVariable(int i) {
			return GetRuleContext<IterationVariableContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVariableContext[] globalVariable() {
			return GetRuleContexts<GlobalVariableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVariableContext globalVariable(int i) {
			return GetRuleContext<GlobalVariableContext>(i);
		}
		public HtmlElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterHtmlElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitHtmlElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHtmlElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HtmlElementContext htmlElement() {
		HtmlElementContext _localctx = new HtmlElementContext(Context, State);
		EnterRule(_localctx, 8, RULE_htmlElement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			openingTag();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274877917844L) != 0)) {
				{
				State = 78;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__1:
					{
					State = 71;
					htmlElement();
					}
					break;
				case T__10:
					{
					State = 72;
					razorBlock();
					}
					break;
				case ID:
					{
					State = 73;
					textContent();
					}
					break;
				case T__3:
					{
					State = 74;
					modelDataExpression();
					}
					break;
				case T__12:
					{
					State = 75;
					foreachStatement();
					}
					break;
				case T__6:
					{
					State = 76;
					iterationVariable();
					}
					break;
				case T__8:
					{
					State = 77;
					globalVariable();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83;
			closingTag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(BasicRazorParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(BasicRazorParser.ID, i);
		}
		public TextContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterTextContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitTextContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContentContext textContent() {
		TextContentContext _localctx = new TextContentContext(Context, State);
		EnterRule(_localctx, 10, RULE_textContent);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 85;
					Match(ID);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 88;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelDataExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(BasicRazorParser.ID, 0); }
		public ModelDataExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelDataExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterModelDataExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitModelDataExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelDataExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelDataExpressionContext modelDataExpression() {
		ModelDataExpressionContext _localctx = new ModelDataExpressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_modelDataExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(T__3);
			State = 91;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelForExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(BasicRazorParser.ID, 0); }
		public ModelForExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelForExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterModelForExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitModelForExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelForExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelForExpressionContext modelForExpression() {
		ModelForExpressionContext _localctx = new ModelForExpressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_modelForExpression);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93;
				Match(T__4);
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94;
				Match(T__5);
				State = 95;
				Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IterationVariableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(BasicRazorParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(BasicRazorParser.ID, i);
		}
		public IterationVariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iterationVariable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterIterationVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitIterationVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIterationVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IterationVariableContext iterationVariable() {
		IterationVariableContext _localctx = new IterationVariableContext(Context, State);
		EnterRule(_localctx, 16, RULE_iterationVariable);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 98;
				Match(T__6);
				State = 99;
				Match(ID);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100;
				Match(T__6);
				State = 101;
				Match(ID);
				State = 102;
				Match(T__7);
				State = 103;
				Match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVariableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(BasicRazorParser.ID, 0); }
		public GlobalVariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVariable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterGlobalVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitGlobalVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVariableContext globalVariable() {
		GlobalVariableContext _localctx = new GlobalVariableContext(Context, State);
		EnterRule(_localctx, 18, RULE_globalVariable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(T__8);
			State = 107;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OpeningTagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(BasicRazorParser.ID, 0); }
		public OpeningTagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_openingTag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.EnterOpeningTag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicRazorListener typedListener = listener as IBasicRazorListener;
			if (typedListener != null) typedListener.ExitOpeningTag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicRazorVisitor<TResult> typedVisitor = visitor as IBasicRazorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOpeningTag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OpeningTagContext openingTag() {
		OpeningTagContext _localctx = new OpeningTagContext(Context, State);
		EnterRule(_localctx, 20, RULE_openingTag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(T__1);
			State = 110;
			Match(ID);
			State = 111;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
